# SCoRe4

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeLists.txt.off  LICENSE  README.md  Surface.cc.off
examples/example_surface/: CMakeLists.txt  example_surface.cc
examples/example_surface/include/: ActionInitialization.hh  Analysis.hh  BoundarySensitiveDetector.hh  DetectorConstruction.hh  EmStandardPhysics_Green.hh  PhysicsList.hh
examples/example_surface/macros/: init_vis.mac  simpler_surface.gdml  source.mac
examples/example_surface/src/: ActionInitialization.cc  DetectorConstruction.cc  EmStandardPhysics_Green.cc  PhysicsList.cc  RunAction.cc  SensitiveDetector.cc
examples/example_surface_portal/: CMakeLists.txt  example_surface_portal.cc
examples/example_surface_portal/include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EmStandardPhysics_Green.hh  PhysicsList.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
examples/example_surface_portal/macros/: roughness.mac  source.mac  vis.mac
examples/example_surface_portal/src/: ActionInitialization.cc  DetectorConstruction.cc  EmStandardPhysics_Green.cc  PhysicsList.cc  RunAction.cc  SteppingAction.cc
src/: CMakeLists.txt
src/ParameterToSurface/: GDMLWriter.py  HeightMap.py  Surface.py  SurfaceGenerator.py  Test.py  VariationOfParameters.py  requirements.txt  setup.sh
src/ParticleGenerator/include/: MultiSubworldSampler.hh  PointShift.hh  PointShiftMessenger.hh  Shift.hh  ShiftTable.hh  ShiftTableMessenger.hh  SurfaceSource.hh  SurfaceSourceMessenger.hh
src/ParticleGenerator/src/: MultiSubworldSampler.cc  MultipleSubworldSampler.cc  PointShift.cc  PointShiftMessenger.cc  ShiftMessenger.cc  ShiftTable.cc  ShiftTableMessenger.cc  SurfaceSource.cc  SurfaceSourceMessenger.cc
src/Portal/include/: MultipleSubworld.hh  PeriodicMultipleSubworld.hh  PeriodicPortal.hh  PortalControl.hh  PortalStore.hh  SimplePortal.hh  SubworldGrid.hh  VPortal.hh
src/Portal/src/: '  MultipleSubworld.cc  MultipleSubworlds.cc  PeriodicMultipleSubworlds.cc  PeriodicPortal.cc  PortalControl.cc  PortalStore.cc  SimplePortal.cc  VPortal.cc
src/Service/include/: FileLogger.hh  G4Voxelizer_Green.hh  G4Voxelizer_Green.icc  Locator.hh  Logger.hh  MultiportalHelper.hh  MultiportalHelperMessenger.hh  PortalRoughnessHelper.hh  RoughnessHelper.hh  RoughnessHelperMessenger.hh  SurfaceStore.hh  VSampler.hh
src/Service/src/: FileLogger.cc  G4Voxelizer_Green.cc  Locator.cc  Logger.cc  MultiportalHelper.cc  MultiportalHelperMessenger.cc  RoughnessHelper.cc  RoughnessHelperMessenger.cc  SurfaceStore.cc
src/Surface/: LogicalSurface.cc  LogicalSurface.hh  Shift.cc  Shift.hh  ShiftMessenger.cc  ShiftMessenger.hh  Source.cc  Source.hh  SurfacePlacement.cc  SurfacePlacement.hh  SurfaceSourceStore.cc  SurfaceSourceStore.hh
src/SurfaceGenerator/include/: Assembler.hh  Calculator.hh  Describer.hh  DescriberMessenger.hh  FacetStore.hh  Generator.hh  RectangleDivider.hh  SimpleSurface.hh  Spike.hh  Storage.hh
src/SurfaceGenerator/src/: Assembler.cc  Calculator.cc  Describer.cc  DescriberMessenger.cc  FacetStore.cc  Generator.cc  RectangleDivider.cc  SimpleSurface.cc  Spike.cc
test/: CMakeLists.txt
test/default_test/: CMakeLists.txt  Untitled.ipynb  default_test.cc
test/default_test/include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh  SteppingAction.hh
test/default_test/macros/: init_vis.mac  multiportal.mac  roughness.mac  surface.mac  vis.mac
test/default_test/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc
test/example_surface/: CMakeLists.txt  example_surface.cc
test/example_surface/include/: Analysis.hh  BoundarySensitiveDetector.hh  EventAction.hh  G4ScreenedNuclearRecoil.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh
test/example_surface/macros/: flat.gdml  init_vis.mac  source.mac  very_simple.gdml  vis.mac
test/example_surface/src/: BoundarySensitiveDetector.cc  DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  SensitiveDetector.cc
test/example_surface_portal/: CMakeLists.txt  example_surface_portal.cc
test/example_surface_portal/include/: BoundarySensitiveDetector.hh  PrimaryGeneratorAction.hh  SteppingAction.hh
test/example_surface_portal/macros/: init_vis.mac  printData.py  roughness.mac  source.mac
test/example_surface_portal/src/: BoundarySensitiveDetector.cc  DetectorConstruction.cc  EmStandardPhysics_Green.cc  PrimaryGeneratorAction.cc  SensitiveDetector.cc
test/include/: DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
test/macros/: vis.mac
test/multiPortalHelper_test/: CMakeLists.txt  multiPortalHelper_test.cc
test/multiPortalHelper_test/include/: DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  SteppingAction.hh
test/multiPortalHelper_test/macros/: surface.mac
test/multiPortalHelper_test/src/: ActionInitialization.cc  DetectorConstruction.cc  PhysicsList.cc  SteppingAction.cc
test/multiPortal_test/: CMakeLists.txt  multiPortal_test.cc
test/multiPortal_test/include/: ActionInitialization.hh  DetectorConstruction.hh  SteppingAction.hh
test/multiPortal_test/macros/: source.mac
test/multiPortal_test/src/: DetectorConstruction.cc  EventAction.cc
test/multiSurface_test/: CMakeLists.txt  multiSurface_test.cc
test/multiSurface_test/include/: ActionInitialization.hh  PhysicsList.hh  (+3 more)
test/multiplePortal_test/: CMakeLists.txt
test/notebooks/: Untitled.ipynb
test/periodicPortalBig_test/: CMakeLists.txt
test/periodicPortal_test/: CMakeLists.txt
test/simplePortal_test/: CMakeLists.txt  simplePortal_test.cc
test/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
test/surfaceShift_test/: CMakeLists.txt  plot.py  surfaceShift_test.cc
test/surface_testsetup/: CMakeLists.txt  surface_testsetup.cc
test/test_surface_placement/: CMakeLists.txt  test_surface_placement.cc
test/tests_python/: test_HeightMap.py
(+119 files in other folders)
