# Testing with a testsetup

add_subdirectory(surface_testsetup)

add_subdirectory(simplePortal_test)

add_subdirectory(periodicPortal_test)

add_subdirectory(periodicPortalBig_test)

add_subdirectory(multiPortal_test)

add_subdirectory(multiPortalHelper_test)

add_subdirectory(surfaceShift_test)

add_subdirectory(multiSurface_test)

add_subdirectory(default_test)

add_subdirectory(gdml_test)

add_subdirectory(test_surface_placement)